# v4r_ros_wrappers

./: .gitignore  .gitlab-ci.yml  Readme.md  Tutorial.md  setup.sh
.gitlab-ci/: prepare.sh  release.sh
camera_tracker/: CMakeLists.txt  package.xml
camera_tracker/include/: camera_tracker.h
camera_tracker/src/: camera_tracker.cpp
camera_tracker_srvs/: CHANGELOG.rst  CMakeLists.txt  package.xml
classifier_srvs/: CHANGELOG.rst  CMakeLists.txt  package.xml
incremental_object_learning/: CMakeLists.txt  package.xml
incremental_object_learning/include/: object_learning_ros.h
incremental_object_learning/src/: object_learning_ros.cpp  test_dol_from_files.cpp
incremental_object_learning_srvs/: CHANGELOG.rst  CMakeLists.txt  package.xml
object_classifier/: CHANGELOG.rst  CMakeLists.txt  package.xml
object_classifier/include/: global_classifier.h
object_classifier/src/: global_classifier.cpp  test.cpp
object_detection_and_tracking/: CMakeLists.txt  package.xml
object_detection_and_tracking/src/: detect_and_track_object.cpp
object_gestalt_segmentation/: CMakeLists.txt  package.xml
object_gestalt_segmentation/include/object_gestalt_segmentation/: object_gestalt_segmentation.h
object_gestalt_segmentation/src/: object_gestalt_segmentation.cpp  test_object_gestalt_segmentation.cpp
object_perception_msgs/: package.xml
object_tracker/: CMakeLists.txt  package.xml
object_tracker/include/: object_tracker.h
object_tracker/src/: object_tracker.cpp
object_tracker_srvs/: CHANGELOG.rst  CMakeLists.txt  package.xml
recognition_srvs/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosdep/: indigo.yaml  kinetic.yaml
segment_and_classify/: CMakeLists.txt  package.xml
segment_and_classify/src/: test.cpp
segmentation/: CMakeLists.txt  package.xml
segmentation/include/: pcl_segmentation_ros.h
segmentation/src/: pcl_segmentation_ros.cpp  test_segmentation.cpp
segmentation_srvs/: CHANGELOG.rst  CMakeLists.txt  package.xml
singleview_object_recognizer/: CMakeLists.txt  package.xml
singleview_object_recognizer/include/: recognizer_ros.h
singleview_object_recognizer/src/: recognizer_ros.cpp  test_single_view_recognizer.cpp
temporal_filtering/: CHANGELOG.rst  package.xml
v4r_camera_tracker/: CMakeLists.txt  package.xml
v4r_camera_tracker/include/: camera_tracker.h
v4r_camera_tracker/src/: camera_tracker.cpp
v4r_camera_tracker_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
v4r_classifier_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
v4r_incremental_object_learning/: CMakeLists.txt  package.xml
v4r_incremental_object_learning/include/: object_learning_ros.h
v4r_incremental_object_learning/src/: object_learning_ros.cpp  test_dol_from_files.cpp
v4r_incremental_object_learning_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
v4r_object_classification/: CHANGELOG.rst  CMakeLists.txt  package.xml
v4r_object_classification/include/: global_classifier.h
v4r_object_classification/src/: global_classifier.cpp  test.cpp
v4r_object_classification_msgs/: CMakeLists.txt  package.xml
v4r_object_classification_msgs/srv/: classify.srv  mv_classify.srv  segment_and_classify.srv
v4r_object_classifier/: CMakeLists.txt  package.xml
v4r_object_classifier/include/: global_classifier.h
v4r_object_classifier/src/: global_classifier.cpp  test.cpp
v4r_object_detection_and_tracking/: CMakeLists.txt  package.xml
v4r_object_detection_and_tracking/src/: detect_and_track_object.cpp
v4r_object_gestalt_segmentation/: CHANGELOG.rst  CMakeLists.txt  package.xml
v4r_object_gestalt_segmentation/include/object_gestalt_segmentation/: object_gestalt_segmentation.h
v4r_object_gestalt_segmentation/src/: object_gestalt_segmentation.cpp  test_object_gestalt_segmentation.cpp
v4r_object_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
v4r_object_recognition/: CMakeLists.txt  ReadMe.md  package.xml
v4r_object_recognition/include/: recognizer_ros.h
v4r_object_recognition/launch/: recognition_service.launch
v4r_object_recognition/src/: recognizer_ros.cpp  test_object_recognizer.cpp  test_single_view_recognizer.cpp
v4r_object_recognition_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
v4r_object_recognition_msgs/srv/: recognize.srv  set_camera.srv
v4r_object_tracker/: CMakeLists.txt  package.xml
v4r_object_tracker/include/: object_tracker.h
v4r_object_tracker/src/: object_tracker.cpp
v4r_object_tracker_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
v4r_recognition_msgs/: CMakeLists.txt  package.xml
v4r_ros_wrappers/: package.xml
v4r_segment_and_classify/: CMakeLists.txt  package.xml
v4r_segment_and_classify/src/: test.cpp
v4r_segmentation/: CMakeLists.txt  package.xml
v4r_segmentation/include/: pcl_segmentation_ros.h
v4r_segmentation/src/: pcl_segmentation_ros.cpp  test_segmentation.cpp
v4r_segmentation_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
v4r_singleview_object_recognizer/: CMakeLists.txt  package.xml
v4r_singleview_object_recognizer/include/: recognizer_ros.h
v4r_singleview_object_recognizer/src/: recognizer_ros.cpp  test_single_view_recognizer.cpp
v4r_temporal_filtering/: CMakeLists.txt  package.xml
